Refactoring serialization of kvs_payloads
Originally we serialize the vector of kvs_payloads as a protobuf object.
Now, we convert the vector to a delimeted string and serialize it as a
string field in the CapsuleBlock protobuf. This was done in effort to
save memory, but has yielded no improvements in the test. Currently, the
test still segfaults at level2 (about 1000 pairs)

--- a/src/core/BUILD
+++ b/src/core/BUILD
@@ -76,6 +76,8 @@ cc_library(
         "@boost//:serialization",
         "@com_github_grpc_grpc//:grpc++",
         ":capsuleBlock_cc_proto",
+        "@com_google_asylo//asylo/util:logging",
+        "@com_google_absl//absl/strings",
     ],
 )
 
