--- a/src/enclave/BUILD
+++ b/src/enclave/BUILD
@@ -65,28 +65,20 @@ debug_sign_enclave(
     unsigned = "capsuleDB_enclave_unsigned.so",
 )
 
-enclave_loader(
-    name = "capsuleDB_enclave",
-    srcs = ["capsuleDB_driver.cc"],
-    backends = sgx.backend_labels,  # Has SGX loader dependencies
-    copts = ASYLO_DEFAULT_COPTS,
-    enclaves = {"enclave": ":capsuleDB_enclave.so"},
-    loader_args = ["--enclave_path='{enclave}'"],
+cc_library(
+    name = "enclave_interface",
+    srcs = [
+        "capsuleDB_driver.cc",
+    ],
+    hdrs = [
+        "capsuleDB_driver.hh",
+    ],
     deps = [
         "//src/shared:capsule",
-        ":demo_cc_proto",
         ":request_cc_proto",
         ":setup_cc_proto",
-        "@com_google_absl//absl/flags:flag",
-        "@com_google_absl//absl/flags:parse",
         "@com_google_asylo//asylo:enclave_cc_proto",
         "@com_google_asylo//asylo:enclave_client",
         "@com_google_asylo//asylo/util:logging",
-    ] + select(
-        {
-            "@linux_sgx//:sgx_hw": ["@com_google_asylo//asylo/platform/primitives/sgx:loader_cc_proto"],
-            "@linux_sgx//:sgx_sim": ["@com_google_asylo//asylo/platform/primitives/sgx:loader_cc_proto"],
-        },
-        no_match_error = "CapsuleDB is only configured to use the SGX backends",
-    ),
+    ]
 )
